--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -6,6 +6,9 @@
     font-weight: bold;
 }
 
-.nav-item .submit {
-    text-align: right;
+
+/* DASHBOARD */
+.container a {
+    text-decoration: none;
+    color: #040720;
 }
